# werilog

./: .env.example  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
agent_output/data-structure-to-verilog/basic/: example-b01.v  example-b02.v  example-b03.v  example-b04.v
agent_output/data-structure-to-verilog/connect/: example-c01.v
agent_output/data-structure-to-verilog/elements/: example-e01.v  example-e02.v  example-e03.v  example-e04.v  example-e05.v  example-e06.v  example-e07.v  example-e08.v  example-e09.v  example-e10.v  example-e11.v
agent_output/data-structure-to-verilog/one_level_multiple_output/: example-o01.v
agent_output/data-structure-to-verilog/procedure/: example-p01.v  example-p02.v
agent_output/data-structure-to-verilog/two_level/: example-t01.v
data/: .gitkeep
dataset/example-data-structure/: README.md
dataset/example-data-structure/basic/: example-b02.yaml  example-b03.yaml  example-b04.yaml
dataset/example-data-structure/connect/: example-c01.yaml
dataset/example-data-structure/elements/: example-e01.yaml  example-e02.yaml  (+9 more)
design/: FR5-aiagent.txt
docs/: RESEARCH_NOTES.md
prompts/: extraction_1.txt  extraction_2.txt
prototypes/mirror/: README.md  main.py  uv-init.sh
src/: __init__.py  client_internvl.py  client_qwen.py  dsu.py  main.py  svg_parser.py  vlm_diagram_extration.py
src/agent/: core.py
src/utils/: data_loader.py
tests/: test_autocomplete.py  test_b02_b04.py  test_diagram_analyzer.py  test_draw_strategy.py  test_qwen.py
tests/webapp/: check_chrome.js  check_chrome.py  check_chrome_suggest.py  test_api.py
(+53 files in other folders)
