[project]
name = "werilog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "canvasvg>=1.0.5",
    "huggingface-hub>=1.8.0",
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "transformers>=4.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
