[project]
name = "werilog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.6.0",
    "canvasvg>=1.0.5",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "huggingface-hub>=1.8.0",
    "openai>=1.0.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "transformers>=4.30.0",
    "Pillow",
    "torch",
    "torchvision",
    "accelerate",
    "mlx>=0.31.2",
    "mlx-vlm>=0.6.1",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
